[package]
name = "google_analytics_hit"
version = "1.0.0"
authors = ["Israel Croce <israelcroce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
futures = "0.3.13"
tokio = { version = "1", features = ["sync", "test-util", "macros"] }
url = "2.2.2"
uuid = { version = "0.8", features = ["v4"] }